--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Proyecto 8 - collage</title>
+<title>Proyecto 8</title>
 <style>
   :root{
     --bg:#2d3b55;
@@ -133,3 +133,4 @@
 
 </body>
 </html>
+
